[profile.release]
overflow-checks = true # Enable integer overflow checks.

[profile.release-with-debug]
inherits = "release"
debug = true

# The profile used for CI in pull requests.
# External dependencies are built with optimization enabled, while crates in this workspace are built
# with `dev` profile and full debug info. This is a trade-off between build time and e2e test time.
[profile.ci-dev]
inherits = "dev"
incremental = false
[profile.ci-dev.package."*"] # external dependencies
opt-level = 1
[profile.ci-dev.package."tokio"]
opt-level = 3
[profile.ci-dev.package."bimap"]

opt-level = 3
[profile.ci-dev.package."rust-analyzer-salsa"]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "crates/cairo-lang-casm",
    "crates/cairo-lang-compiler",
    "crates/cairo-lang-debug",
    "crates/cairo-lang-defs",
    "crates/cairo-lang-diagnostics",
    "crates/cairo-lang-doc",
    "crates/cairo-lang-eq-solver",
    "crates/cairo-lang-executable",
    "crates/cairo-lang-filesystem",
    "crates/cairo-lang-formatter",
    "crates/cairo-lang-lowering",
    "crates/cairo-lang-parser",
    "crates/cairo-lang-plugins",
    "crates/cairo-lang-proc-macros",
    "crates/cairo-lang-project",
    "crates/cairo-lang-runnable-utils",
    "crates/cairo-lang-runner",
    "crates/cairo-lang-semantic",
    "crates/cairo-lang-sierra",
    "crates/cairo-lang-sierra-ap-change",
    "crates/cairo-lang-sierra-gas",
    "crates/cairo-lang-sierra-generator",
    "crates/cairo-lang-sierra-to-casm",
    "crates/cairo-lang-sierra-type-size",
    "crates/cairo-lang-starknet",
    "crates/cairo-lang-starknet-classes",
    "crates/cairo-lang-syntax",
    "crates/cairo-lang-syntax-codegen",
    "crates/cairo-lang-test-plugin",
    "crates/cairo-lang-test-runner",
    "crates/cairo-lang-utils",
    "crates/bin/cairo-compile",
    "crates/bin/cairo-execute",
    "crates/bin/cairo-format",
    "crates/bin/cairo-run",
    "crates/bin/cairo-test",
    "crates/bin/generate-syntax",
    "crates/bin/sierra-compile",
    "crates/bin/starknet-compile",
    "crates/bin/starknet-sierra-compile",
    "crates/bin/starknet-sierra-extract-code",
    "crates/bin/get-lowering",
    "crates/bin/starknet-sierra-upgrade-validate",
    "tests",
]
exclude = ["ensure-no_std"]

[workspace.package]
version = "2.10.1"
edition = "2021"
repository = "https://github.com/starkware-libs/cairo/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.95"
ark-ff = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-secp256r1 = "0.5.0"
ark-std = "0.5.0"
assert_matches = "1.5"
bimap = "0.6.3"
bincode = "1.3.3"
cairo-lang-primitive-token = "1"
cairo-vm = { version = "1.0.2", features = ["mod_builtin"] }
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
const-fnv1a-hash = "1.1.0"
const_format = "0.2.34"
convert_case = "0.7.1"
derivative = "2.2.0"
diffy = "0.4.2"
env_logger = "0.11.6"
genco = "0.17.10"
good_lp = { version = "1.11.0", features = ["minilp"], default-features = false }
hashbrown = "0.15.2"
id-arena = "2.2.1"
ignore = "0.4.23"
indent = "0.1.1"
indexmap = { version = "2.7.1", default-features = false }
indoc = "2.0.5"
itertools = { version = "0.14.0", default-features = false }
keccak = "0.1.5"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
log = "0.4.25"
num-bigint = { version = "0.4.6", default-features = false }
num-integer = "0.1.46"
num-traits = { version = "0.2.19", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
    "derive",
] }
path-clean = "1.0.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rand = "0.9.0"
rayon = "1.10.0"
rstest = "0.24.0"
salsa = { package = "rust-analyzer-salsa", version = "0.17.0-pre.6" }
schemars = { version = "0.8.21", features = ["preserve_order"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sha3 = "0.10.8"
smol_str = { version = "0.3.2", features = ["serde"] }
starknet-types-core = { version = "0.1.7", features = [
    "hash",
    "prime-bigint",
    "serde",
] }
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
test-case = "3.3.1"
test-case-macros = "3.3.1"
test-log = "0.2.17"
thiserror = "2.0.11"
time = { version = "0.3.37", features = [
    "formatting",
    "macros",
    "local-offset",
] }
tokio = { version = "1.43.0", features = ["full", "sync"] }
toml = "0.8.20"
unescaper = "0.1.5"
xshell = "0.2.7"

openssl = { version = "0.10.71" }
