[profile.release]
overflow-checks = true # Enable integer overflow checks.

[profile.release-with-debug]
debug = true
inherits = "release"

# The profile used for CI in pull requests.
# External dependencies are built with optimization enabled, while crates in this workspace are built
# with `dev` profile and full debug info. This is a trade-off between build time and e2e test time.
[profile.ci-dev]
incremental = false
inherits = "dev"
[profile.ci-dev.package."*"] # external dependencies
opt-level = 1
[profile.ci-dev.package."bimap"]
opt-level = 3
[profile.ci-dev.package."cairo-vm"]
opt-level = 3
[profile.ci-dev.package."hashbrown"]
opt-level = 3
[profile.ci-dev.package."num-bigint"]
opt-level = 3
[profile.ci-dev.package."rayon"]
opt-level = 3
[profile.ci-dev.package."salsa"]
opt-level = 3
[profile.ci-dev.package."starknet-types-core"]
opt-level = 3
[profile.ci-dev.package."tokio"]
opt-level = 3
[profile.ci-dev.package."vector-map"]
opt-level = 3
[profile.ci-dev.package."mimalloc"]
opt-level = 3
[profile.ci-dev.package."libmimalloc-sys"]
opt-level = 3

[workspace]
resolver = "2"
members = [
  "crates/bin/cairo-compile",
  "crates/bin/cairo-execute",
  "crates/bin/cairo-format",
  "crates/bin/cairo-run",
  "crates/bin/cairo-size-profiler",
  "crates/bin/cairo-test",
  "crates/bin/generate-syntax",
  "crates/bin/get-lowering",
  "crates/bin/sierra-compile",
  "crates/bin/starknet-compile",
  "crates/bin/starknet-sierra-compile",
  "crates/bin/starknet-sierra-extract-code",
  "crates/bin/starknet-sierra-upgrade-validate",
  "crates/cairo-lang-casm",
  "crates/cairo-lang-compiler",
  "crates/cairo-lang-debug",
  "crates/cairo-lang-defs",
  "crates/cairo-lang-diagnostics",
  "crates/cairo-lang-doc",
  "crates/cairo-lang-eq-solver",
  "crates/cairo-lang-executable",
  "crates/cairo-lang-executable-plugin",
  "crates/cairo-lang-execute-utils",
  "crates/cairo-lang-filesystem",
  "crates/cairo-lang-formatter",
  "crates/cairo-lang-lowering",
  "crates/cairo-lang-parser",
  "crates/cairo-lang-plugins",
  "crates/cairo-lang-proc-macros",
  "crates/cairo-lang-project",
  "crates/cairo-lang-runnable-utils",
  "crates/cairo-lang-runner",
  "crates/cairo-lang-semantic",
  "crates/cairo-lang-sierra",
  "crates/cairo-lang-sierra-ap-change",
  "crates/cairo-lang-sierra-gas",
  "crates/cairo-lang-sierra-generator",
  "crates/cairo-lang-sierra-to-casm",
  "crates/cairo-lang-sierra-type-size",
  "crates/cairo-lang-starknet",
  "crates/cairo-lang-starknet-classes",
  "crates/cairo-lang-syntax",
  "crates/cairo-lang-syntax-codegen",
  "crates/cairo-lang-test-plugin",
  "crates/cairo-lang-test-runner",
  "crates/cairo-lang-utils",
  "tests",
]
exclude = ["ensure-no_std"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/starkware-libs/cairo/"
rust-version = "1.86"
version = "2.14.0"

[workspace.dependencies]
anyhow = "1.0.98"
ark-ff = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-secp256r1 = "0.5.0"
ark-std = "0.5.0"
assert_matches = "1.5"
bimap = "0.6.3"
bincode = { version = "2", features = ["serde"] }
cairo-lang-primitive-token = "1"
cairo-vm = { version = "3.0.0", features = ["mod_builtin"] }
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
const-fnv1a-hash = "1.1.0"
const_format = "0.2.34"
convert_case = "0.10.0"
derivative = "2.2.0"
diffy = "0.4.2"
genco = "0.19.0"
good_lp = { version = "1.14.0", features = ["minilp"], default-features = false }
hashbrown = "0.16.0"
id-arena = "2.2.1"
ignore = "0.4.23"
indent = "0.1.1"
indexmap = { version = "2.10.0", default-features = false }
indoc = "2.0.6"
itertools = { version = "0.14.0", default-features = false }
keccak = "0.1.5"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
log = "0.4.27"
mimalloc = { version = "0.1.48" }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = "0.1.46"
num-traits = { version = "0.2.19", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
path-clean = "1.0.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.2"
rayon = "1.10.0"
rstest = "0.26.1"
salsa = "0.24.0"
schemars = { version = "1.0.4", features = ["preserve_order"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "rc"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sha3 = "0.10.8"
smol_str = { version = "0.3.2", default-features = false }
starknet-types-core = { version = "0.2.4", features = ["hash", "prime-bigint", "serde"] }
syn = { version = "2.0.104", features = ["extra-traits", "full"] }
test-case = "3.3.1"
test-case-macros = "3.3.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.47.1", features = ["full", "sync"] }
toml = "0.9.5"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
typetag = "0.2"
unescaper = "0.1.6"
vector-map = { version = "1.0.2", features = ["serde_impl"] }
xshell = "0.2.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

openssl = { version = "0.10.73" }
