[package]
name = "dep-test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = ""

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
test-log.workspace = true
toml.workspace = true
serde = { version = "1.0.130", features = ["derive"] }

[[test]]
name = "dep_test"
path = "dep_test.rs"
