[package]
name = "ensure-no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-utils = { path = "../crates/cairo-lang-utils", default-features = false, features = ["serde", "parity-scale-codec"] }
cairo-lang-casm = { path = "../crates/cairo-lang-casm", default-features = false, features = ["serde", "parity-scale-codec"] }

esp-alloc = "0.3.0"
