[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-std = { path = "../crates/cairo-lang-std", default-features = false }
cairo-lang-utils = { path = "../crates/cairo-lang-utils", default-features = false }
cairo-lang-casm = { path = "../crates/cairo-lang-casm", default-features = false }

wee_alloc = "0.4.5"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
