[package]
name = "tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = ""

[dev-dependencies]
assert_matches.workspace = true
cairo-felt.workspace = true
cairo-lang-casm = { path = "../crates/cairo-lang-casm", version = "2.0.0-rc3" }
cairo-lang-compiler = { path = "../crates/cairo-lang-compiler", version = "2.0.0-rc3" }
cairo-lang-defs = { path = "../crates/cairo-lang-defs", version = "2.0.0-rc3" }
cairo-lang-diagnostics = { path = "../crates/cairo-lang-diagnostics", version = "2.0.0-rc3" }
cairo-lang-filesystem = { path = "../crates/cairo-lang-filesystem", version = "2.0.0-rc3" }
cairo-lang-lowering = { path = "../crates/cairo-lang-lowering", version = "2.0.0-rc3" }
cairo-lang-parser = { path = "../crates/cairo-lang-parser", version = "2.0.0-rc3" }
cairo-lang-plugins = { path = "../crates/cairo-lang-plugins", version = "2.0.0-rc3" }
cairo-lang-runner = { path = "../crates/cairo-lang-runner", version = "2.0.0-rc3" }
cairo-lang-semantic = { path = "../crates/cairo-lang-semantic", features = ["testing"] }
cairo-lang-sierra = { path = "../crates/cairo-lang-sierra", version = "2.0.0-rc3" }
cairo-lang-sierra-gas = { path = "../crates/cairo-lang-sierra-gas", version = "2.0.0-rc3" }
cairo-lang-sierra-generator = { path = "../crates/cairo-lang-sierra-generator", features = ["testing"] }
cairo-lang-sierra-to-casm = { path = "../crates/cairo-lang-sierra-to-casm", features = ["testing"] }
cairo-lang-syntax = { path = "../crates/cairo-lang-syntax", version = "2.0.0-rc3" }
cairo-lang-test-utils = { path = "../crates/cairo-lang-test-utils", version = "2.0.0-rc3" }
cairo-lang-utils = { path = "../crates/cairo-lang-utils", version = "2.0.0-rc3" }
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
num-bigint.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
salsa.workspace = true
test-case.workspace = true
test-log.workspace = true

[[test]]
name = "examples_test"
path = "examples_test.rs"

[[test]]
name = "e2e_test"
path = "e2e_test.rs"
