[package]
name = "tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = ""

[dev-dependencies]
assert_matches.workspace = true
cairo-felt.workspace = true
cairo-lang-casm = { path = "../crates/cairo-lang-casm" }
cairo-lang-compiler = { path = "../crates/cairo-lang-compiler" }
cairo-lang-defs = { path = "../crates/cairo-lang-defs" }
cairo-lang-diagnostics = { path = "../crates/cairo-lang-diagnostics" }
cairo-lang-filesystem = { path = "../crates/cairo-lang-filesystem" }
cairo-lang-lowering = { path = "../crates/cairo-lang-lowering" }
cairo-lang-parser = { path = "../crates/cairo-lang-parser" }
cairo-lang-plugins = { path = "../crates/cairo-lang-plugins" }
cairo-lang-runner = { path = "../crates/cairo-lang-runner" }
cairo-lang-semantic = { path = "../crates/cairo-lang-semantic", features = ["testing"] }
cairo-lang-sierra = { path = "../crates/cairo-lang-sierra" }
cairo-lang-sierra-gas = { path = "../crates/cairo-lang-sierra-gas" }
cairo-lang-sierra-generator = { path = "../crates/cairo-lang-sierra-generator" }
cairo-lang-sierra-to-casm = { path = "../crates/cairo-lang-sierra-to-casm", features = ["testing"] }
cairo-lang-syntax = { path = "../crates/cairo-lang-syntax" }
cairo-lang-test-utils = { path = "../crates/cairo-lang-test-utils", features = ["testing"] }
cairo-lang-utils = { path = "../crates/cairo-lang-utils" }
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
num-bigint.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rust-analyzer-salsa.workspace = true
test-log.workspace = true

[[test]]
name = "examples_test"
path = "examples_test.rs"

[[test]]
name = "e2e_test"
path = "e2e_test.rs"
