[package]
name = "cairo-casm"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo assembly encoding."

[dependencies]
cairo-vm.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
cairo-utils = { path = "../cairo-utils" }
indoc.workspace = true

[dev-dependencies]
env_logger.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true
test-log.workspace = true
