[package]
name = "cairo-compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo compiler."

[dependencies]
anyhow.workspace = true
clap.workspace = true
cairo-diagnostics = { path = "../cairo-diagnostics" }
cairo-defs = { path = "../cairo-defs" }
cairo-filesystem = { path = "../cairo-filesystem" }
log.workspace = true
cairo-lowering = { path = "../cairo-lowering" }
cairo-semantic = { path = "../cairo-semantic" }
cairo-sierra = { path = "../cairo-sierra" }
cairo-sierra-generator = { path = "../cairo-sierra-generator" }
cairo-syntax = { path = "../cairo-syntax" }
cairo-parser = { path = "../cairo-parser" }
cairo-plugins = { path = "../cairo-plugins" }
cairo-project = { path = "../cairo-project" }
salsa.workspace = true
thiserror.workspace = true
cairo-utils = { path = "../cairo-utils" }

[dev-dependencies]
test-log.workspace = true

[[bin]]
name = "cairo-compile"
path = "src/cli.rs"
