[package]
name = "cairo-defs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Handling of definitions of language items in Cairo."

[dependencies]
cairo-debug = { path = "../cairo-debug" }
cairo-diagnostics = { path = "../cairo-diagnostics" }
cairo-filesystem = { path = "../cairo-filesystem" }
indexmap.workspace = true
itertools.workspace = true
salsa.workspace = true
cairo-syntax = { path = "../cairo-syntax" }
thiserror.workspace = true
cairo-parser = { path = "../cairo-parser" }
smol_str.workspace = true
cairo-utils = { path = "../cairo-utils" }

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
