[package]
name = "cairo-diagnostics"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Diagnostic utilities."

[dependencies]
cairo-utils = { path = "../cairo-utils" }
cairo-filesystem = { path = "../cairo-filesystem" }
itertools.workspace = true
salsa.workspace = true

[dev-dependencies]
cairo-proc-macros = { path = "../cairo-proc-macros" }
env_logger.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
