[package]
name = "cairo-eq-solver"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Equation solving for Sierra generation."

[dependencies]
good_lp.workspace = true
itertools.workspace = true
cairo-utils = { path = "../cairo-utils" }

[dev-dependencies]
env_logger.workspace = true
indoc.workspace = true
test-case.workspace = true
test-log.workspace = true
