[package]
name = "cairo-filesystem"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Virtual filesystem for the compiler."

[dependencies]
cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
cairo-debug = { path = "../cairo-debug", version = "0.1.0" }
path-clean.workspace = true
cairo-project = { path = "../cairo-project", version = "0.1.0" }
salsa.workspace = true
smol_str.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
