[package]
name = "cairo-lang-casm-contract-class"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Casm representaion of a starknet contract"

[dependencies]
cairo-lang-casm = { path = "../cairo-lang-casm", version = "2.1.0-rc0", default-features = false }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "2.1.0-rc0", default-features = false }
itertools.workspace = true
num-bigint.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "cairo-lang-casm/std",
    "cairo-lang-utils/std",
    "num-bigint/std",
    "itertools/use_std",
    "serde/std",
]
serde = ["dep:serde", "cairo-lang-casm/serde"]
